Environment Pass does not work with "Persistent Data" turned on #89396

Closed
opened 2021-06-23 22:05:45 +02:00 by Jona Melvin Grobe · 6 comments

System Information
Operating system: Windows 10
Graphics card: Zotac gtx 1080

Blender Version
Broken 3.0 a6f275cad3
Worked 2.92

Short description of error
Environment pass will create artifacts or black screen output if "persistent data" is turned on.

Exact steps for others to reproduce the error
Bug_persistentdata_envoirement.blend

  • Open file
  • Render image (see black background - env pass is black)
  • Uncheck Persistent Data
  • Render image

Background is now correct.

**System Information** Operating system: Windows 10 Graphics card: Zotac gtx 1080 **Blender Version** Broken 3.0 a6f275cad3 Worked 2.92 **Short description of error** Environment pass will create artifacts or black screen output if "persistent data" is turned on. **Exact steps for others to reproduce the error** [Bug_persistentdata_envoirement.blend](https://archive.blender.org/developer/F10191445/Bug_persistentdata_envoirement.blend) - Open file - Render image (see black background - env pass is black) - Uncheck Persistent Data - Render image Background is now correct.

Added subscriber: @jmelving

Added subscriber: @jmelving

#90047 was marked as duplicate of this issue

#90047 was marked as duplicate of this issue

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 45a47142fc

This issue was referenced by 45a47142fc4de73237d9335c5eb8afa946a20c1d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2021-07-12 15:42:32 +02:00

Added subscribers: @sentharn, @iss

Added subscribers: @sentharn, @iss
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89396
No description provided.