Fix T89396: Cycles missing passes with multiple view layers and persistent data